fix: place temporal pieces with real pieces in between